<resources>
    <string name="app_name">Scannerate</string>
    <string name="create_scan">Create scan</string>
    <string name="placeholder_text_about_us_and_the_app" translatable="false">Placeholder text - about us and the app</string>
    <string name="support">Support</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="share">Share</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="support_development">Support Development</string>
    <string name="open_source_licenses">Open source libraries</string>
    <string name="your_scans">Your Scans</string>
    <string name="feels_empty_here_create_some_scans">Feels empty here. Create some scans!</string>
    <string name="saving_code">Scanning…</string>
    <string name="git_nikola" translatable="false">https://github.com/nikolaDrljaca</string>
    <string name="git_ognjen" translatable="false">https://github.com/drljacao96</string>
    <string name="mail_nikola" translatable="false">devnikoladr@gmail.com</string>
    <string name="mail_ognjen" translatable="false">drljacao96@hotmail.com</string>
    <string name="ognjen_drljaca" translatable="false">Ognjen Drljaca</string>
    <string name="nikola_drljaca" translatable="false">Nikola Drljaca</string>
    <string name="developers">Developers</string>
    <string name="about_the_app">About the app</string>
    <string name="ognjen_linkedin_url" translatable="false">https://www.linkedin.com/in/ognjen-drljaca-b57a251b6/</string>
    <string name="app_description"><![CDATA[Scannerate helps you scan text from images on your device. Scan your desired image, and edit the text that was scanned at any time. Export your text to a PDF file and use it everywhere!]]></string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_title">Enter title…</string>

    <string name="text_date_created">Created: %1$s</string>
    <string name="text_date_modified">Modified: %1$s</string>
    <string name="num_of_scans">%1$d Scans</string>

    <string name="save_changes">Save changes?</string>
    <string name="scan_updated">Scan updated.</string>
    <string name="unsaved_changes">There seem to be unsaved changes.</string>
    <string name="delete_scanned_text">This will delete the scanned text.</string>
    <string name="copied_clip">Copied to clipboard.</string>
    <string name="unsupported_language">No supported language found.</string>
    <string name="scanning_in_progress">Scanning in progress.</string>
    <string name="loading">Loading.</string>
    <string name="no_google_translate">It seems you don\'t have Google Translate installed.</string>
    <string name="something_went_wrong">Something went wrong.</string>

    <string name="header_pinned">Pinned</string>
    <string name="headers_other">Others</string>
    <string name="no_text_found">No text was found.</string>
    <string name="color">Color</string>
    <string name="customize_your_export">Customize your export</string>
    <string name="export">Export</string>
    <string name="cancel">Cancel</string>
    <string name="font_size">Font size</string>
    <string name="linkedin_nikola" translatable="false">https://linkedin.com/in/nikola-drljacaa</string>

    <string name="scan_deleted">Scan deleted.</string>
    <string name="undo">Undo</string>
    <string name="welcome">Welcome!</string>
    <string name="extract_text_from_images_easily_by_creating_a_scan_nclick_on_the_button_to_launch_an_image_picker_and_select_an_image_to_extract_its_text">Extract text from images easily by creating a scan! Click on the button to launch an image picker and select an image to extract its text.</string>
    <string name="next">Next</string>
    <string name="edit">Edit!</string>
    <string name="edit_and_format_extracted_text_you_can_also_copy_share_and_even_translate">Edit and format extracted text. You can also copy, share and even translate!</string>
    <string name="previous">Previous</string>
    <string name="export_as_pdf">Export as PDF!</string>
    <string name="export_your_scans_and_edits_in_pdf_format">Export your scans and edits in PDF format.</string>
    <string name="finish">Finish</string>
    <string name="camera_permission_info">"The application needs access to the camera in order to capture and crop a photo from which text is extracted.\n\nPlease keep in mind, if the permission is denied twice you will need to change it manually in the settings. "</string>
    <string name="okay">Okay</string>
    <string name="heads_up">Heads Up!</string>
    <string name="scan_title">Scan Title</string>
    <string name="placeholder_for_scanned_content">Placeholder for scanned content</string>
    <string name="black_color">Black</string>
    <string name="red_color">Red</string>
    <string name="green_color">Green</string>
    <string name="blue_color">Blue</string>
    <string name="yellow_color">Yellow</string>
    <string name="open_source">Keep supporting open source!</string>
    <string name="went_wrong">It\'s empty here. Something went wrong.</string>
    <string name="consider_support">Consider supporting our work!</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_options">More options will be added later on.</string>
    <string name="support_btn">Support</string>
    <string name="purchase_verified">Your purchase has been verified!</string>
    <string name="choose_option">You can do that by choosing one of the options below.</string>
</resources>