<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/dialog_background"
    android:padding="28dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="300dp">

        <TextView
            android:id="@+id/tv_export"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customize_your_export"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/noto_sans_jp_regular"
            android:textColor="@color/heavy_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginVertical="8dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/color_menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_export"
            android:hint="@string/color"
            app:boxStrokeColor="@color/heavy_blue"
            app:hintTextColor="@color/heavy_blue"
            app:endIconTint="@color/heavy_blue"
            >

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/font_size_menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/color_menu"
            android:hint="@string/font_size"
            app:boxStrokeColor="@color/heavy_blue"
            app:hintTextColor="@color/heavy_blue"
            app:endIconTint="@color/heavy_blue">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/export"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/heavy_blue"
            app:backgroundTint="@color/light_blue"
            app:rippleColor="@color/heavy_blue"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/cancel"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/heavy_blue"
            app:rippleColor="@color/heavy_blue"
            app:layout_constraintEnd_toStartOf="@id/button_export"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
