<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:transitionGroup="true"
    android:clipToPadding="false"
    android:transitionName="info_screen"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/info_section_background"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="About the app"
                android:textColor="@color/detail_text_title_color"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"/>

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_round_broken_image_24"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="AppName"
                android:textSize="16sp"
                android:textColor="@color/detail_text_title_color"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Version: 1.0"
                android:textSize="14sp"
                android:textColor="@color/detail_text_title_color"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/placeholder_text_about_us_and_the_app"
                android:textSize="14sp"
                android:textColor="?android:attr/textColorPrimary"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/info_section_background"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Developers"
                android:textColor="@color/detail_text_title_color"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Nikola Drljaca"
                android:textSize="16sp"
                android:textColor="@color/detail_text_title_color"/>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/github_logo"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Ognjen Drljaca"
                android:textSize="16sp"
                android:textColor="@color/detail_text_title_color"/>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/github_logo"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/info_section_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/support"
                android:layout_marginTop="8dp"
                android:textColor="@color/detail_text_title_color"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/privacy_policy"
                android:layout_margin="10dp"
                android:textColor="?android:attr/textColorPrimary"
                android:background="?attr/selectableItemBackground"
                android:padding="4dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_report_bug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/report_a_bug"
                android:layout_margin="10dp"
                android:textColor="?android:attr/textColorPrimary"
                android:background="?attr/selectableItemBackground"
                android:padding="4dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/share"
                android:layout_margin="10dp"
                android:textColor="?android:attr/textColorPrimary"
                android:background="?attr/selectableItemBackground"
                android:padding="4dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_rate_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/rate_this_app"
                android:layout_margin="10dp"
                android:textColor="?android:attr/textColorPrimary"
                android:background="?attr/selectableItemBackground"
                android:padding="4dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/support_development"
                android:layout_margin="10dp"
                android:textColor="?android:attr/textColorPrimary"
                android:background="?attr/selectableItemBackground"
                android:padding="4dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_licenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/open_source_licenses"
                android:layout_margin="10dp"
                android:textColor="?android:attr/textColorPrimary"
                android:background="?attr/selectableItemBackground"
                android:padding="4dp"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>